<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingVertical="32dp"
    tools:context=".imccalculator.IMCCalculatorActivity"
    android:background="@color/bg_app">
    <androidx.cardview.widget.CardView
        android:id="@+id/viewMale"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/viewFemale"
        app:cardBackgroundColor="@color/bg_component_selected"
        app:cardCornerRadius="16dp"
        >  
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:src="@drawable/ic_baseline_male_24"
                android:contentDescription="@string/maleicon"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textAllCaps="true"
                android:textColor="@color/title_text"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/viewFemale"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/viewMale"
        app:cardBackgroundColor="@color/bg_component"
        app:cardCornerRadius="16dp"
        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:src="@drawable/ic_baseline_female_24"
                android:contentDescription="@string/femaleicon"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textAllCaps="true"
                android:textColor="@color/title_text"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewHeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewMale"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/bg_component"
        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_margin="16dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textColor="@color/title_text"
                android:textAllCaps="true"
                />
            <TextView
                android:id="@+id/tvHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="120 cm"
                android:textSize="38sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rsHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stepSize="1"
                android:valueFrom="120"
                android:valueTo="240"
                tools:ignore="SpeakableTextPresentCheck" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewWeight"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@+id/viewHeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/viewAge"
        app:cardBackgroundColor="@color/bg_component"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textColor="@color/title_text"
                android:textAllCaps="true"
                />
            <TextView
                android:id="@+id/tvWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="0"
                android:textSize="38sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnMinusWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/minusweightfab"
                    android:src="@drawable/ic_minus"
                    app:backgroundTint="@color/purple_500"
                    android:strokeColor="#FFFFFF"  />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnPlusWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:contentDescription="@string/plusweightfab"
                    android:src="@drawable/ic_plus"
                    app:backgroundTint="@color/purple_500"
                    android:strokeColor="#FFFFFF" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/viewAge"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@+id/viewHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/viewWeight"
        app:cardBackgroundColor="@color/bg_component"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="8dp"
        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textColor="@color/title_text"
                android:textAllCaps="true"
                />
            <TextView
                android:id="@+id/tvAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="0"
                android:textSize="38sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnMinusAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/minusagefab"
                    android:src="@drawable/ic_minus"
                    app:backgroundTint="@color/purple_500"
                    android:strokeColor="#FFFFFF"  />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnPlusAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:contentDescription="@string/plusagefab"
                    android:src="@drawable/ic_plus"
                    app:backgroundTint="@color/purple_500"
                    android:strokeColor="#FFFFFF" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="0dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/calculate"
        />

</androidx.constraintlayout.widget.ConstraintLayout>